fix: improve sub-header visibility handling based on route data

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -67,6 +67,10 @@
       display: contents;
     }
   }
+
+  &__blank--main {
+    grid-template-rows: auto !important;
+  }
 }
 
 @media screen and (max-width: 768px) {
